WVFIS-377: Input fields spacing issue

--- a/react_webviews/src/common/ui/style.scss
+++ b/react_webviews/src/common/ui/style.scss
@@ -494,7 +494,7 @@ body[data-device="mobile"] {
   .input-box {
     display: flex;
     justify-content: space-between;
-    margin: 50px 0 0 0;
+    margin: 25px 0 0 0;
     border-bottom: 1px solid #949494;
     padding: 0 0 3px 0;
     cursor: pointer;
@@ -549,7 +549,7 @@ body[data-device="mobile"] {
 
 .plus-minus-input-label {
   color: #0A1D32;
-  font-size: 13px;
+  font-size: 14px;
   font-weight: 400;
   margin: 0 0 10px 0;
 }
